# VirtualEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt  VirtualEditor.ini  precompile.json
engine/asset/level/: 1-1.level.json
engine/asset/objects/character/player/: player.object.json
engine/asset/objects/environment/wall/: wall.object.json
engine/asset/objects/environment/wall/mesh/: wall.mehs.component.json  wall.mesh.component.json  wall.mesh.json
engine/asset/world/: hello.world.json
engine/shader/: CMakeLists.txt
engine/shader/glsl/: shader.frag  shader.vert  triangle.frag  triangle.vert
engine/source/editor/: CMakeLists.txt
engine/source/editor/include/: axis.h  editor.h  editor_file_service.h  editor_ui.h
engine/source/editor/source/: axis.cpp  editor.cpp  editor_file_service.cpp  editor_ui.cpp  main.cpp
engine/source/meta_parser/: CMakeLists.txt
engine/source/meta_parser/parser/language_types/: class.cpp  field.cpp
engine/source/precompile/: precompile.cmake  precompile.json.in
engine/source/runtime/: CMakeLists.txt  engine.cpp  engine.h
engine/source/runtime/core/base/: macro.h  public_singleon.h
engine/source/runtime/core/log/: log_system.cpp  log_system.h
engine/source/runtime/core/math/: axis_aligned.cpp  axis_aligned.h  math.cpp  math.h  math_header.h  math_maros.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  quaternion.cpp  quaternion.h  random.h  transform.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  vector4.cpp  vector4.h
engine/source/runtime/core/meta/: json.h  meta_example.cpp  meta_example.h
engine/source/runtime/core/meta/reflection/: reflection.cpp  reflection.h  reflection_register.cpp  reflection_register.h
engine/source/runtime/core/meta/serializer/: serializer.cpp  serializer.h
engine/source/runtime/function/framework/component/: component.h
engine/source/runtime/function/framework/level/: level.cpp  level.h
engine/source/runtime/function/framework/object/: object.cpp  object.h
engine/source/runtime/function/framework/world/: world_manager.cpp  world_manager.h
engine/source/runtime/function/global/: global_context.cpp  global_context.h
engine/source/runtime/function/input/: input_system.cpp  input_system.h
engine/source/runtime/function/physics/: physics_actor.cpp  physics_actor.h  physics_system.cpp  physics_system.h
engine/source/runtime/function/render/: render_pipeline.cpp  render_pipeline.h  render_resouce_base.h  render_system.cpp  render_system.h  render_type.h  window_system.cpp  window_system.h
engine/source/runtime/function/render/include/: render.h  (+7 more)
engine/source/runtime/function/scene/: scene_allocator.h  scene_manager.cpp  scene_manager.h  scene_object.h
engine/source/runtime/function/ui/: ui_system.cpp  ui_system.h  window_ui.cpp  window_ui.h
engine/source/runtime/platform/file_service/: file_service.cpp  file_service.h
engine/source/runtime/platform/path/: path.cpp  path.h
engine/source/runtime/resource/asset_manager/: asset_manager.cpp  asset_manager.h
engine/source/runtime/resource/config_manager/: config_manager.cpp  config_manager.h
engine/template/: allReflectionFile.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache
(+73 files in other folders)
